Fixed search button bug
1.I noticed when I clicked on the Search button the city did not change.
2. I realised what was causing this bug was wrapping the Search button around a div and button element.
3. Once I removed the button and div element and changed it to an input, this solved the problem.
4. I also changed the font size of the units because they were too big and were making the space alignment on the page look odd.

--- a/src/Temperature.css
+++ b/src/Temperature.css
@@ -3,7 +3,7 @@
   bottom: 45px;
   left: 35px;
   color: var(--primary-color);
-  font-size: 11px;
+  font-size: 9px;
   font-weight: 500;
   text-decoration: none;
 }
